--- a/templates/blocks/_footer.html.twig
+++ b/templates/blocks/_footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="footer-page transparent">
+<footer class="footer-page">
     <div class="footer-copyright">
         <div class="container">
             <ul class=" center-align">
@@ -10,5 +10,5 @@
             </p>
         </div>
     </div>
-{% include "blocks/components/svgs/_section_down.html.twig" %}
+{# {% include "blocks/components/svgs/_section_down.html.twig" %} #}
 </footer>
