--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -4,36 +4,41 @@
 
     <div class="body">
         <section>
-            {% include "blocks/components/svgs/_section-up.html.twig" %}
+            {# {% include "blocks/components/svgs/_section-up.html.twig" %} #}
 
             {% include "blocks/components/_day-night-switch.html.twig" with {
                 id: 'togButton',
                 class: 'desktop_button',
             } %}
 
+            <div id="projects" class="section_titles"><h6 class="center-align">PORTFOLIO</h6></div>
+            
             <div id="portfolio" class="section scrollspy js-portfolio">
                 <div class="container">
-                    <h6 class="competences ">PORTFOLIO</h6>
                     {% include "blocks/_project.html.twig" %}
                 </div>
             </div>
 
+            <div id="cursus" class="section_titles"><h6 class="center-align">PARCOURS</h6></div>
+            
             <div id="formations" class="section scrollspy js-education">
                 <div class="container">
-                    <h6 class="center-align competences ">PARCOURS</h6>
                     <div class="row formations">
                         {% include "blocks/_education.html.twig" %}
                     </div>
                 </div>
             </div>
 
+            <div id="tools" class="section_titles"><h6 class="scenter-align">ENV</h6></div>
+              
             <div id="competences" class="section scrollspy js-competence">
-                <div class="container">
-                <h6 class="competences ">ENV</h6>    
+                <div class="container"> 
                 {% include "blocks/components/svgs/_brands_shuffle.html.twig" %}
                 </div>  
             </div>
   
+            <div id="contact-me" class="section_titles"><h6 class="center-align">CONTACT</h6></div>
+            
             {% include "blocks/_contact.html.twig" %}
             {% include "blocks/_footer.html.twig" %}
         </section>
