--- a/assets/styles/front/_main.scss
+++ b/assets/styles/front/_main.scss
@@ -11,13 +11,15 @@ body {
     .white-text {
         color: rgb(var(--primary-theme));
     }
-    h6 {
-        &.competences {
-            opacity: .1;
+    .section_titles {
+        height: 350px;
+        display: flex;
+        h6 {
+            margin: auto;
+            color: rgba(var(--secondary-theme), .1);
             letter-spacing: 10px;
             font-weight: 700 !important;
             font: normal 100px/1 "Josefin Sans", Helvetica, sans-serif;
-            text-align: center;
         }
     }
 
@@ -46,21 +48,136 @@ body {
         }
         &.shrink::after {
             right: initial;
-            left: 30.6%;
+            left: 12.6%;
 
+        }
+    }
+    .background_container {
+        background-color: rgb(var(--main-theme));
+        width: 100%;
+        position: fixed;
+        top:0;
+        left:0;
+        height:100%;
+        transition: all 0.5s;
+        z-index: 1;
+        &.shrink {
+            width: 200px;
+            z-index: 2;
+            .text {
+                div:last-child {
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis
+                }
+            }
+        }
+        .box-caption {
+            padding-top: 11rem;
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            transition: visibility 0.4s, opacity 0.4s linear;
+            h5, .job {
+                font-size: 40px;
+            }
+            .name {
+                a.al {
+                    position: relative;
+                    color: inherit;
+                    font-family: inherit;
+                    cursor: text;
+                }
+            }
+            span {
+                display: block;
+            }
+            h3, .name {
+                font-size: 50px;
+            }
+            .caption {
+                position: relative;
+                height: 100vh;
+                display: flex;
+            }
+            .sep {
+                width: 25%;
+                margin: 0 auto;
+                height: 5px;
+                background: rgb(var(--secondary-theme));
+                background: linear-gradient(90deg, rgb(var(--secondary-theme)) 0%, rgb(var(--gradient)) 48%, rgb(var(--main-theme)) 100%);
+            }
+            .text-caption {
+                border-radius: 0 100px;
+            }
+            #aPropos {
+                padding-top: 0;
+                margin-top: 1.5rem;
+                .text {
+                    text-align: center;
+                    padding: 10px 0;
+                }
+                .row {
+                    margin: 0;
+                }
+            }
+        }
+    }
+    .background_trigger {
+        position: fixed;
+        border-radius: 50%;
+        text-align: center;
+        top: 50%;
+        right: 2%;
+        height: 54px;
+        line-height: 54px;
+        width: 54px;
+        font-size: 25px;
+        font-weight: 400;
+        z-index: 3;
+        color: rgb(var(--secondary-theme));
+        border: 1px solid rgb(var(--secondary-theme));
+        &.out {
+            right: initial;
+            left: 1%;
+            top: initial;
+            bottom: 2%
+        }
+    }
+    #side_nav {
+        padding-top: 5rem;
+        .collection {
+            border:none;
+            .collection-item {
+                background-color: rgb(var(--main-theme));
+                padding: 0;
+                &:last-child {
+                    border-bottom: none;
+                }
+                cursor: pointer;
+                a {
+                    display: block;
+                    padding: 16% 12%;
+                    color: rgb(var(--secondary-theme));
+                    transition: all .3s;
+                    &:hover {
+                        padding-left: 25%;
+                    }
+                }
+            }
         }
     }
     .right_side {
         position:absolute;
         right:0;
-        width: 66.6666666667%;
-        background-color: rgb(var(--main-theme));
-        margin-left: 33.333333% !important;
+        margin-left: 200px;
         padding: 0 !important;
         transition: all .4s;
         z-index: 2;
         &.out {
             width: 0;
+            margin-left: 0;
             overflow: hidden;
         }
     }
@@ -113,21 +230,7 @@ body {
         background-color: rgba(var(--main-theme),.04)!important;
         backdrop-filter: blur(81px);
     }
-    .right-align {
-        .sidenav-close {
-            padding-top: 20px;
-            display: inline-block;
-        }
-        .sidenav-close:hover {
-            background: transparent !important;
-        }
-    }   
     nav {
-        &.nav-hidden {
-            &, .logo {
-                transform: translate3d(0,-100%,0)
-            }
-        }
         .nav-wrapper {
             ul {
                 li {
@@ -136,42 +239,11 @@ body {
             }
             text-align: center;
         }
-        i.far.fa-smile-wink {
-            height: 15px !important;
-            line-height: 1 !important;
-        }
         height: 80px !important;
         line-height: 80px !important;
         -webkit-transition: all .3s;
         -o-transition: all .3s;
         transition: all .3s;
-        a.sidenav-trigger {
-            display: flex;
-            svg {
-                display: block;
-                margin: auto;
-                -webkit-box-shadow: 0px 0px 4px 0px #C4C4C4;
-                box-shadow: 0px 0px 4px 0px #C4C4C4;
-                .line {
-                    fill: none;
-                    stroke: rgba(var(--secondary-theme), .8);
-                    stroke-width: 6;
-                    transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1), stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
-                }
-                .line1 {
-                    stroke-dasharray: 60 207;
-                    stroke-width: 6;
-                }
-                .line2 {
-                    stroke-dasharray: 60 60;
-                    stroke-width: 6;
-                }
-                .line3 {
-                    stroke-dasharray: 60 207;
-                    stroke-width: 6;
-                }   
-            }
-        }
         ul {
             padding-right: 10px;
             a {
@@ -264,12 +336,6 @@ body {
     }
     .separator {
         font-weight: bold;
-    }
-    #logo {
-        transition: all .5s;
-        &.out {
-            transform: translate3d(0,-105%,0)
-        }
     }
     .logo {
         position: absolute;
@@ -370,42 +436,64 @@ body {
         }
     }
     .section {
+        background-color: rgb(var(--main-theme));
         position: relative;
         padding: 4rem 0;
     }
     #portfolio {
         .container {
             width: 100%;
-            padding: 4rem 0 0 0;
 
         }
+        .tool_badges {
+            width: 80%;
+            margin: 0 auto 1rem auto;
+            .badge {
+                background-color: rgba(var(--tertiary-theme, .7));
+                margin: 6px 6px 0 3px;
+                padding: 2px 4px;
+                text-transform: lowercase;
+            }
+            a {
+                color: rgb(var(--secondary-theme));
+            }
+        }
         .col {
-            margin: 0 !important;
-            padding: 0 !important;
+            margin: 0;
+            padding: 0;
             img {
                 width: 100%;
                 object-fit: cover;
             }
         }
-    }
-    .hexIn {
-        .hexLink {
-            color: rgb(var(--secondary-theme));
-            h2, div {
-                background-color: rgba(var(--accent-background), 0.85);
+        .hexIn {
+            border-color: rgb(var(--main-theme));
+            .hexLink {
+                // color: rgb(var(--secondary-theme));
+                h2, div {
+                    // background-color: rgba(var(--accent-background), 0.85);
+                }
+                h2 {
+                    &:after {
+                        border-color: rgb(var(--secondary-theme));
+                    }
+                }
             }
         }
-    }
-    .slideshow-container {
-        .slides {
-            &:after {
-                background-color: rgba(var(--accent-background), 0.85);
+        .slideshow-container {
+            .slides {
+                .slide_text {
+                    // color: rgba(var(--secondary-theme));
+                }
+                &:after {
+                    // background-color: rgba(var(--accent-background), 0.85);
+                }
             }
-        }
-        .prev, .next {
-            color: rgb(var(--secondary-theme));
-            &:hover {
-                background-color: rgba(var(--main-theme),0.8);
+            .prev, .next {
+                color: rgb(var(--secondary-theme));
+                &:hover {
+                    background-color: rgba(var(--main-theme),0.8);
+                }
             }
         }
     }
@@ -440,6 +528,36 @@ body {
     #formations {
         .container {
             width: 100%;
+            
+            #timeline {
+                display: flex;
+                background-color: rgb(var(--tertiary-color));
+            }
+            .tl-item {
+                color: rgb(var(--secondary-theme));
+                &:after {
+                    // background: rgba(var(--accent-background), 0.85);
+                }
+                &:before {
+                    background: linear-gradient(to bottom, rgba(var(--main-theme), 0) 0%,rgba(var(--main-theme),1) 75%);
+                }
+            }
+            .tl-content {
+                h3, h4 {
+                    font-family: 'Josefin Sans', sans-serif !important;
+                    font-size: 14px;
+                }
+                h3 {
+                    color: rgb(var(--accent-color));
+                }
+                h4 {
+                    font-weight: bold;
+                    opacity: .7;
+                }
+            }
+            .tl-year {
+                border-color: rgb(var(--secondary-theme));
+            }
         }
     }
     .btn {
@@ -447,105 +565,6 @@ body {
     }
     .btn-primary {
         margin: 0 5px 2px 0;
-    }
-    h5, .job {
-        font-size: 40px;
-    }
-    .name {
-        a.al {
-            position: relative;
-            color: inherit;
-            font-family: inherit;
-            cursor: text;
-        }
-    }
-    h3, .name {
-        font-size: 50px;
-    }
-    .box-caption {
-        padding-top: 11rem;
-        position: absolute;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        transition: visibility 0.4s, opacity 0.4s linear;
-        span {
-            display: block;
-        }
-    }
-    .background_container {
-        background-color: rgb(var(--main-theme));
-        width: 100%;
-        position: fixed;
-        top:0;
-        left:0;
-        height:100%;
-        transition: all 0.5s;
-        z-index: 1;
-        &.shrink {
-            width: 33.3333%;
-            .text {
-                div:last-child {
-                    white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis
-                }
-            }
-        }
-    }
-    .background_trigger {
-        position: fixed;
-        border-radius: 50%;
-        text-align: center;
-        top: 50%;
-        right: 2%;
-        height: 54px;
-        line-height: 54px;
-        width: 54px;
-        font-size: 25px;
-        font-weight: 400;
-        z-index: 3;
-        color: rgb(var(--secondary-theme));
-        border: 1px solid rgb(var(--secondary-theme));
-        &.out {
-            right: 65%;
-        }
-    }
-    .caption {
-        position: relative;
-        height: 100vh;
-        display: flex;
-    }
-    .sep {
-        width: 25%;
-        margin: 0 auto;
-        height: 5px;
-        background: rgb(var(--secondary-theme));
-        background: linear-gradient(90deg, var(--secondary-theme) 0%, var(--gradient) 48%, var(--main-theme) 100%);
-    }
-    .text-caption {
-        border-radius: 0 100px;
-    }
-    #aPropos {
-        padding-top: 0;
-        margin-top: 1.5rem;
-        .text {
-            text-align: center;
-            padding: 10px 0;
-        }
-        .row {
-            margin: 0;
-        }
-    }
-    .progress-bar {
-        border-radius: 20px;
-    }
-    .progress-inner-bar {
-        border-radius: 20px;
-        height: 10px;
-        width: 5%;
-        background: rgb(var(--secondary-theme));
-        transition: all .9s;
     }
     .head-link.btn-floating.btn-large.btn {
         position: absolute;
@@ -557,9 +576,6 @@ body {
         right: 50%;
         top: 85%;
         transform: translateX(50%);
-    }
-    .portfolio_blocks {
-        display: none;
     }
     .modal {
         max-height: 85%;
@@ -657,6 +673,9 @@ body {
             object-fit: cover;
         }
     }
+    footer {
+        background-color: rgb(var(--main-theme));
+    }
     .footer-copyright {
         .row {
             margin: 0;
@@ -703,35 +722,6 @@ body {
         .row {
             margin: 0;
         }
-    }
-    #timeline {
-      display: flex;
-      background-color: rgb(var(--tertiary-color));
-    }
-    .tl-item {
-        color: rgb(var(--secondary-theme));
-        &:after {
-          background: rgba(var(--accent-background), 0.85);
-        }
-        &:before {
-          background: linear-gradient(to bottom, rgba(var(--main-theme), 0) 0%,rgba(var(--main-theme),1) 75%);
-        }
-    }
-    .tl-content {
-        h3, h4 {
-            font-family: 'Josefin Sans', sans-serif !important;
-            font-size: 14px;
-        }
-        h3 {
-            color: rgb(var(--accent-color));
-        }
-        h4 {
-            font-weight: bold;
-            opacity: .7;
-        }
-    }
-    .tl-year {
-        border-color: rgb(var(--secondary-theme));
     }
 }
 
