--- a/templates/blocks/_contact.html.twig
+++ b/templates/blocks/_contact.html.twig
@@ -1,6 +1,5 @@
-<div id="contact" class="page-footer transparent  section scrollspy">
+<div id="contact" class="page-footer section scrollspy">
     <div class="container">
-        <h6 class="center-align  competences">CONTACT</h6>
         <div class="row">
             <div class="col s12">
                 <p class="center-align">N'hésitez pas à m'envoyer un e-mail à cette adresse : <a href="mailto:charlotte.saidi@outlook.fr">charlotte.saidi@outlook.fr</a>, ou à me laisser un message sur le site. Je vous répondrai dans les plus brefs délais.</p>
